Unificar login (admin/jurado), remover telas jurado; gestão de jurados com senha temporária; rota e página para troca de senha no primeiro acesso; ajuste de rotas e ícones no painel

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.ico" />
         <title>Prêmio Melhores Práticas MPPI - 9ª Edição</title>
         <meta name="description" content="Ficha de Inscrição para o Prêmio Melhores Práticas do Ministério Público do Estado do Piauí - 9ª Edição 2025" />
     <meta name="author" content="Lovable" />
